--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 					</div>
 					<div class="col-8 col-7-large col-12-medium">
 						<header>
+							<h1></h1>
 							<h2>Well, hello there! Thank you for visiting my portfolio.</h2>
 						</header>
 						<p>My name is <strong>Samuel DiMaggio</strong>. I have an M.S. in Data Science from Maryville University in St. Louis, MO and a B.S. in Physics from Westminster College in Salt Lake City, UT. </p>
@@ -78,8 +79,14 @@
 								<p>Here I created a simple book recommender system using tensorflow to identify possible books a user may enjoy based off a rating system from 1 to 10. I had the program to randomly select a user and recommend a list of 10 books that the user might enjoy.</p>
 						</article>
 					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="https://github.com/Samuel-DiMaggio/Linear_Regression_Pytorch_Tensorflow_Aerodynamics_Acoustics" class="image"><img src="images/plane.jfif" alt="" /></a>
+							<div class="inner">
+								<h4><a href="https://github.com/Samuel-DiMaggio/Linear_Regression_Pytorch_Tensorflow_Aerodynamics_Acoustics">Linear Regression Using Pytorch and Tensorflow on Aerodynamics and Acoustics Dataset</a></h4>
+								<p>Comparing and optimizing linear regression models on an aerodynamic and acoustic .dat file.</p>
+					</div>
 				</div>
-			</div>
 		</article>
 
 		<!-- Contact -->
