--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
 							<div class="inner">
 								<h4><a href="https://github.com/Samuel-DiMaggio/Linear_Regression_Pytorch_Tensorflow_Aerodynamics_Acoustics">Linear Regression Using Pytorch and Tensorflow on Aerodynamics and Acoustics Dataset</a></h4>
 								<p>Comparing and optimizing linear regression models on an aerodynamic and acoustic .dat file.</p>
+						</article>
+					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="https://github.com/Samuel-DiMaggio/Recurrent-Neural-Network-Womens-Clothing-Reviews" class="image"><img src="images/Clothing.jfif" alt="" /></a>
+							<div class="inner">
+								<h4><a href="https://github.com/Samuel-DiMaggio/Recurrent-Neural-Network-Womens-Clothing-Reviews">Recurrent Neural Network (RNN) - Womens Clothing Reviews</a></h4>
+								<p>Working with a Women’s Clothing E-Commerce dataset revolving around the reviews written by customers. I will be performing text classification while building a Recurrent Neural Network (RNN)</p>
+						</article>
 					</div>
 				</div>
 		</article>
